# .everboxing

./: .gitignore  Readme.md  build.gradle  build_dex.gradle  build_ver.gradle  gradle.properties  settings.gradle  slob_exclude.txt
Art/Textures/Linen Patterns/: linen.psd
EverboxingHardyDialogs/: build.gradle
EverboxingHardyDialogs/src/main/: AndroidManifest.xml
EverboxingLexisModule/: build.gradle  privacypolicy.html  proguard-rules.txt
EverboxingLexisModule/src/main/: AndroidManifest.xml
EverboxingModule/: build.gradle  checkstyle.xml  proguard-rules.txt  robolectric-iml.gradle
EverboxingModule/config/findbugs/: findbugs-config.xml
EverboxingModule/config/pmd/: pmd-config.xml
EverboxingModule/src/main/: AndroidManifest.xml
EverboxingSplashFlameModule/: build.gradle  privacypolicy.html  proguard-rules.txt
EverboxingSplashFlameModule/.flamer_prj/Flamer/: CMakeLists.txt  fractal.c  fractal.h
EverboxingSplashFlameModule/.flamer_prj/Flamer(Ext)/: CMakeLists.txt  co.txt  fractal.c
EverboxingSplashFlameModule/jni/: Android.mk  Application.mk
EverboxingSplashFlameModule/jni/ljpeg/: fractal.c  fractal.h
EverboxingSplashFlameModule/src/main/: AndroidManifest.xml
EverboxingTools/: .gitignore  build.gradle  proguard-rules.txt
EverboxingTools/src/main/: AndroidManifest.xml
_Art/5.0_Android_L_Icons/Font -  Gen using Icomoon/: demo.html  (+2 more)
_Art/Android_Test_Icons_2.5/: readme.txt
_Art/Boilerplates/: readme.txt
_Art/Free_IconSet_GemIcon/: readme.txt
_Trash/EverboxingSplashFlameModule/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+815 files in other folders)
